# swagger.yaml
@@ -112,6 +112,48 @@ paths:
             $ref: '#/definitions/TypeRes'
         '400':
           description: Invalid input
+  /patent/technology:
+    post:
+      summary: 技术构成分析
+      operationId: patent_technology
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/TechnologyReq'
+      responses:
+        '200':
+          description: success
+          schema:
+            $ref: '#/definitions/TechnologyRes'
+        '400':
+          description: Invalid input
+  /patent/concentration:
+    post:
+      summary: 集中度分析
+      operationId: patent_concentration
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/ConcentrationReq'
+      responses:
+        '200':
+          description: success
+          schema:
+            $ref: '#/definitions/ConcentrationRes'
+        '400':
+          description: Invalid input
 definitions:
   Trend1Req:
     type: object
@@ -201,4 +243,38 @@ definitions:
             type: string
           num:
             type: integer
-
+  TechnologyReq:
+    type: object
+    properties:
+      industry:
+        type: string
+      area:
+        type: string
+  TechnologyRes:
+    type: object
+    properties:
+      data:
+        type: array
+        properties:
+          class:
+            type: string
+          num:
+            type: integer
+  ConcentrationReq:
+    type: object
+    properties:
+      industry:
+        type: string
+      area:
+        type: string
+  ConcentrationRes:
+    type: object
+    properties:
+      data:
+        type: array
+        properties:
+          year:
+            type: string
+          proportion:
+            type: number
+            format: float
