# swagger_server/controllers/default_controller.py
@@ -9,7 +9,11 @@ from swagger_server.models.applicant_req import ApplicantReq  # noqa: E501
 from swagger_server.models.applicant_res import ApplicantRes  # noqa: E501
 from swagger_server.models.area_req import AreaReq  # noqa: E501
 from swagger_server.models.area_res import AreaRes  # noqa: E501
-from swagger_server.models.mysql.db import create_connection, close_connection, DecimalEncoder
+from swagger_server.models.concentration_req import ConcentrationReq  # noqa: E501
+from swagger_server.models.concentration_res import ConcentrationRes  # noqa: E501
+from swagger_server.models.mysql.db import close_connection, create_connection, DecimalEncoder
+from swagger_server.models.technology_req import TechnologyReq  # noqa: E501
+from swagger_server.models.technology_res import TechnologyRes  # noqa: E501
 from swagger_server.models.trend1_req import Trend1Req  # noqa: E501
 from swagger_server.models.trend1_res import Trend1Res  # noqa: E501
 from swagger_server.models.trend2_req import Trend2Req  # noqa: E501
@@ -264,6 +268,192 @@ def patent_type(body):  # noqa: E501
     if results:
         response = {
             'data': [{'type': row['patent_type'], 'num': row['num']} for row in results]
+        }
+        response_json = json.dumps(response, ensure_ascii=False)
+        return make_response(response_json, 200, {'Content-Type': 'application/json'})
+    else:
+        return jsonify({'message': 'No data found'}), 200
+
+
+def patent_concentration(body):  # noqa: E501
+    """集中度分析
+
+     # noqa: E501
+
+    :param body:
+    :type body: dict | bytes
+
+    :rtype: ConcentrationRes
+    """
+    if not request.is_json:
+        return jsonify({'message': 'Invalid input'}), 400
+
+    body = request.get_json()
+    concentration_req = ConcentrationReq.from_dict(body)
+
+    connection = create_connection()
+    if connection is None:
+        return jsonify({'message': 'Database connection failed'}), 500
+
+    cursor = connection.cursor(dictionary=True)
+    query = """
+    WITH RecentYears AS (
+    SELECT
+        applicant_name,
+        YEAR(application_date) AS year,
+        application_area_code,
+        patent_type,
+        COUNT(*) AS total_applications
+    FROM
+        biz_patent_0713
+    WHERE
+        application_date >= DATE_SUB(CURDATE(), INTERVAL 10 YEAR)
+    AND meta_class like %s
+    AND application_area_code like %s
+    GROUP BY
+        applicant_name, YEAR(application_date), application_area_code, patent_type
+),
+
+     RankedApplicants AS (
+         SELECT
+             applicant_name,
+             year,
+             application_area_code,
+             patent_type,
+             total_applications,
+             RANK() OVER (PARTITION BY year, application_area_code, patent_type ORDER BY total_applications DESC) AS rnk
+         FROM
+             RecentYears
+     ),
+
+     Top10Applicants AS (
+         SELECT
+             year,
+             application_area_code,
+             patent_type,
+             applicant_name,
+             total_applications
+         FROM
+             RankedApplicants
+         WHERE
+             rnk <= 10
+     ),
+
+     TotalApplicationsPerYear AS (
+         SELECT
+             year,
+             application_area_code,
+             patent_type,
+             SUM(total_applications) AS total_applications_per_year
+         FROM
+             RecentYears
+         GROUP BY
+             year, application_area_code, patent_type
+     ),
+
+     Top10TotalApplicationsPerYear AS (
+         SELECT
+             year,
+             application_area_code,
+             patent_type,
+             SUM(total_applications) AS top10_total_applications_per_year
+         FROM
+             Top10Applicants
+         GROUP BY
+             year, application_area_code, patent_type
+     )
+
+SELECT
+    t1.year,
+    SUM(t2.top10_total_applications_per_year) / SUM(t1.total_applications_per_year) * 100 AS proportion
+FROM
+    TotalApplicationsPerYear t1
+        JOIN
+    Top10TotalApplicationsPerYear t2
+    ON
+        t1.year = t2.year
+            AND t1.application_area_code = t2.application_area_code
+            AND t1.patent_type = t2.patent_type
+GROUP BY
+    t1.year
+ORDER BY
+    t1.year;
+    """
+    like_pattern1 = f"%{concentration_req.industry}%"
+    if concentration_req.industry is None:
+        like_pattern1 = f"%%"
+    like_pattern2 = f"%{concentration_req.area}%"
+    if concentration_req.area is None:
+        like_pattern2 = f"%%"
+    cursor.execute(query, (like_pattern1, like_pattern2))
+    results = cursor.fetchall()
+    close_connection(connection)
+
+    if results:
+        response = {
+            'data': [{'year': row['year'], 'proportion': row['proportion']} for row in results]
+        }
+        response_json = json.dumps(response, ensure_ascii=False, cls=DecimalEncoder)
+        return make_response(response_json, 200, {'Content-Type': 'application/json'})
+    else:
+        return jsonify({'message': 'No data found'}), 200
+
+
+def patent_technology(body):  # noqa: E501
+    """技术构成分析
+
+     # noqa: E501
+
+    :param body:
+    :type body: dict | bytes
+
+    :rtype: TechnologyRes
+    """
+    if not request.is_json:
+        return jsonify({'message': 'Invalid input'}), 400
+
+    body = request.get_json()
+    technology_req = TechnologyReq.from_dict(body)
+
+    connection = create_connection()
+    if connection is None:
+        return jsonify({'message': 'Database connection failed'}), 500
+
+    cursor = connection.cursor(dictionary=True)
+    query = """  
+SELECT
+    meta_class as class,
+    total_applications as num
+FROM (
+         SELECT
+             meta_class,
+             COUNT(*) AS total_applications
+         FROM
+             biz_patent_0713
+         WHERE
+             application_date >= DATE_SUB(CURDATE(), INTERVAL 10 YEAR)
+           AND meta_class LIKE %s
+           AND application_area_code LIKE %s
+         GROUP BY
+             meta_class
+     ) AS RecentYears
+ORDER BY
+    total_applications DESC
+LIMIT 10;
+    """
+    like_pattern1 = f"%{technology_req.industry}%"
+    if technology_req.industry is None:
+        like_pattern1 = f"%%"
+    like_pattern2 = f"%{technology_req.area}%"
+    if technology_req.area is None:
+        like_pattern2 = f"%%"
+    cursor.execute(query, (like_pattern1, like_pattern2))
+    results = cursor.fetchall()
+    close_connection(connection)
+
+    if results:
+        response = {
+            'data': [{'class': row['class'], 'num': row['num']} for row in results]
         }
         response_json = json.dumps(response, ensure_ascii=False)
         return make_response(response_json, 200, {'Content-Type': 'application/json'})
