# swagger_server/models/concentration_res.py
@@ -1,0 +1,63 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.concentration_res_data import ConcentrationResData  # noqa: F401,E501
+from swagger_server import util
+
+
+class ConcentrationRes(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, data: ConcentrationResData=None):  # noqa: E501
+        """ConcentrationRes - a model defined in Swagger
+
+        :param data: The data of this ConcentrationRes.  # noqa: E501
+        :type data: ConcentrationResData
+        """
+        self.swagger_types = {
+            'data': ConcentrationResData
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ConcentrationRes':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ConcentrationRes of this ConcentrationRes.  # noqa: E501
+        :rtype: ConcentrationRes
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> ConcentrationResData:
+        """Gets the data of this ConcentrationRes.
+
+
+        :return: The data of this ConcentrationRes.
+        :rtype: ConcentrationResData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: ConcentrationResData):
+        """Sets the data of this ConcentrationRes.
+
+
+        :param data: The data of this ConcentrationRes.
+        :type data: ConcentrationResData
+        """
+
+        self._data = data
