# swagger_server/models/technology_res.py
@@ -1,0 +1,63 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.technology_res_data import TechnologyResData  # noqa: F401,E501
+from swagger_server import util
+
+
+class TechnologyRes(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, data: TechnologyResData=None):  # noqa: E501
+        """TechnologyRes - a model defined in Swagger
+
+        :param data: The data of this TechnologyRes.  # noqa: E501
+        :type data: TechnologyResData
+        """
+        self.swagger_types = {
+            'data': TechnologyResData
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'TechnologyRes':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The TechnologyRes of this TechnologyRes.  # noqa: E501
+        :rtype: TechnologyRes
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> TechnologyResData:
+        """Gets the data of this TechnologyRes.
+
+
+        :return: The data of this TechnologyRes.
+        :rtype: TechnologyResData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: TechnologyResData):
+        """Sets the data of this TechnologyRes.
+
+
+        :param data: The data of this TechnologyRes.
+        :type data: TechnologyResData
+        """
+
+        self._data = data
